Server connection fixes